Revert from unicode playing cards (issue with vertical alignment) to text with unicode suit and card number.

--- a/21.css
+++ b/21.css
@@ -225,7 +225,7 @@ button:focus {
 
 ins.card {
   font-family: 'Noto Sans Symbols', 'Arial Unicode MS', sans-serif;
-  font-size: 24rem;
+  font-size: 6rem;
   text-decoration: none;
   background-color: white;
   color: black;
@@ -233,8 +233,8 @@ ins.card {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 18rem;
-  height: 24rem;
+  width: min-content;
+  height: min-content;
   margin: 0.5rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
@@ -322,13 +322,6 @@ ins.wins {
 @media screen and (max-height: 499px) {
   h1 {
     font-size: 6rem;
-  }
-  ins.card{
-    width: 7rem;
-    height: 9rem;
-    font-size:11rem;
-    border-radius: 0.25rem;
-
   }
   div,
   ins,
